# pyado

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  AGENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: AGENT.md  alternatives.md  conf.py  contributing.md  index.md  quick_reference.md  reference.md  usage.md
src/pyado/: __init__.py  api_call.py  build.py  exceptions.py  git_push.py  pipeline.py  profile.py  project.py  pull_request.py  repository.py  variable_group.py  work_item.py
src/pyado/high/: __init__.py  build.py  git.py  pull_request.py  variable_group.py  work_item.py
src/pyado/oop/: __init__.py  _build.py  _git.py  _pull_request.py  _work_item.py  active_build_task.py  area.py  build.py  build_timeline.py  client.py  commit.py  iteration.py  organization.py  pipeline.py  project.py  pull_request.py  repository.py  service.py  team.py  variable_group.py  work_item.py
src/pyado/oop/boards/: __init__.py  _classification.py  _work_item.py  area.py  iteration.py  project_boards.py  team.py  work_item.py  work_item_type.py
src/pyado/oop/core/: __init__.py  process.py  search.py
src/pyado/oop/overview/: __init__.py  dashboard.py  wiki.py
src/pyado/oop/pipelines/: __init__.py  _build.py  _variable_group.py  agent.py  build.py  build_timeline.py  distributed_task_session.py  environment.py  pipeline.py  pipeline_library.py  project_pipelines.py  secure_file.py  service_endpoint.py  task_group.py  variable_group.py
src/pyado/oop/repos/: __init__.py  _git.py  _pull_request.py  branch.py  commit.py  file_change.py  policy.py  policy_types.py  project_repos.py  pull_request.py  repository.py  tag.py
src/pyado/oop/settings/: __init__.py  project_settings.py  service_endpoint.py
src/pyado/oop/smoke_test/: __init__.py  _build.py  _iteration_area.py  _organization.py  _pipeline.py  _project.py  _pull_request.py  _repository.py  _runner.py  _service.py  _team.py  _variable_group.py  _work_item.py  smoke_test_oop.py
src/pyado/raw/: __init__.py  _core.py  build.py  git.py  identity.py  pipeline.py  profile.py  project.py  pull_request.py  team.py  variable_group.py  work_item.py
src/pyado/raw/boards/: __init__.py  board.py  team.py  team_settings.py  work_item.py
src/pyado/raw/core/: __init__.py  identity.py  process.py  profile.py  project.py  search.py  security.py
src/pyado/raw/overview/: __init__.py  dashboard.py  wiki.py
src/pyado/raw/pipelines/: __init__.py  agent.py  build.py  environment.py  pipeline.py  secure_file.py  task_group.py  variable_group.py
src/pyado/raw/repos/: __init__.py  git.py  policy.py  policy_types.py  pull_request.py
src/pyado/raw/settings/: __init__.py  hook.py  notification.py  service_endpoint.py
src/pyado/raw/smoke_test/: __init__.py  _agent.py  _approvals.py  _build.py  _git.py  _pipeline.py  _profile.py  _projects.py  _pull_request.py  _runner.py  _team.py  _variable_group.py  _work_item.py  smoke_test_raw.py
tests/: __init__.py  conftest.py  pipeline.yaml  test_api_call.py  test_build.py  test_git_push.py  test_identity.py  test_main.py  test_oop.py  test_pipeline.py  test_placeholder.py  test_profile.py  test_project.py  test_pull_request.py  test_repository.py  test_smoke.py  test_team.py  test_variable_group.py  test_work_item.py
tests/integration/: __init__.py  conftest.py
tests/integration/oop/: __init__.py  _support.py  conftest.py  test_agent.py  test_build_read.py  test_build_write.py  test_coverage.py  test_iteration_area.py  test_organization.py  test_pipeline_read.py  test_pipeline_write.py  test_process.py  test_project_read.py  test_project_write.py  test_pull_request_read.py  test_repository_read.py  test_repository_write.py  test_search.py  test_service.py  test_teams.py  test_variable_group_read.py  test_variable_group_write.py  test_work_item_read.py  test_work_item_write.py
tests/integration/raw/: __init__.py  _support.py  conftest.py  test_agent_pools.py  test_approvals.py  test_build_artifacts.py  test_build_definitions.py  test_build_runs.py  test_classification_read.py  test_classification_write.py  test_coverage.py  test_environments.py  test_git_commits.py  test_git_refs.py  test_git_repositories.py  test_git_tags.py  test_hook.py  test_identity.py  test_notifications.py  test_onpremise_pipeline.py  test_pipeline_read.py  test_pipeline_write.py  test_policy_read.py  test_policy_write.py  test_process.py  test_profile.py  test_projects.py  test_pull_request_read.py  test_pull_request_write.py  test_search.py  test_secure_files.py  test_service_endpoints.py  test_task_groups.py  test_teams.py  test_variable_group_read.py  test_variable_group_write.py  test_wiki.py  test_work_item_read.py  test_work_item_types.py  test_work_item_write.py
tests/oop/: __init__.py  conftest.py  test_agent_oop.py  test_branch_tag.py  test_build.py  test_commit.py  test_dashboard.py  test_git.py  test_iteration.py  test_organization.py  test_pipeline.py  test_policy.py  test_policy_types.py  test_process.py  test_project.py  test_pull_request.py  test_repository.py  test_search.py  test_secure_file_oop.py  test_service.py  test_service_endpoint.py  test_tag.py  test_task_group.py  test_team.py  test_variable_group.py  test_wiki.py  test_work_item.py  test_work_item_type.py
tests/raw/: __init__.py  test_agent.py  test_api_call.py  test_board.py  test_build.py  test_core.py  test_dashboard.py  test_environment.py  test_git_push.py  test_hook.py  test_identity.py  test_notification.py  test_pipeline.py  test_policy.py  test_policy_types.py_  test_process.py  test_profile.py  test_project.py  test_pull_request.py  test_repository.py  test_search.py  test_secure_file.py  test_security.py  test_service_endpoint.py  test_task_group.py  test_team.py  test_team_settings.py  test_variable_group.py  test_wiki.py  test_work_item.py  test_work_item_types.py
