[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.8,<1.0.0"]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "prek>=0.4.3",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.11.0",
  "ty>=0.0.42",
  "types-requests>=2.32.0"
]
docs = [
  "furo>=2024.1.29",
  "myst-parser>=4.0.0",
  "sphinx>=8.2.3"
]

[project]
authors = [
  {name = "Fred Stober", email = "pyado@fredstober.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP"
]
dependencies = [
  "pydantic>=2.11.7",
  "requests>=2.32.2"
]
description = "Typed, Pydantic-backed wrappers and Pythonic convenience methods for the Azure DevOps REST API"
keywords = ["azure", "devops", "ado", "api", "pydantic", "azure-devops"]
license = "MIT"
name = "pyado"
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.3"

[project.urls]
"Bug Tracker" = "https://github.com/fredstober/pyado/issues"
Documentation = "https://pyado.readthedocs.io/"
Homepage = "https://github.com/fredstober/pyado"
Repository = "https://github.com/fredstober/pyado"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["scripts", "*/scripts"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "def test\\(\\) -> None:"
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "*/pyado/raw/coverage.py",
  "*/pyado/high/coverage.py"
]
source = ["pyado", "scripts"]

[tool.mypy]
plugins = ["pydantic.mypy"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--cov=pyado --cov=tests --cov-report=term-missing"

[tool.ruff.lint]
ignore = [
  "ANN401",  # any-type
  "COM812"  # missing-trailing-comma
]
preview = true
select = [
  "ALL"
]

[tool.ruff.lint.per-file-ignores]
"src/pyado/high/pull_request.py" = [
  "PLR0913"  # create_pr legitimately needs 4 positional + 2 keyword-only params
]
"src/pyado/high/variable_group.py" = [
  "PLR0913"  # update_variable_group passes through all VariableGroupUpdateRequest fields
]
"src/pyado/oop/pull_request.py" = [
  "PLR0913"  # set_status legitimately needs 2 positional + 4 keyword-only params
]
"tests/**" = [
  "D101",  # Test classes don't need class-level docstrings
  "D102",  # Test methods are self-documenting via their names
  "PLR2004",  # Magic values in test assertions are self-explanatory
  "PLR6301",  # Test helper methods are instance methods by convention
  "PLC2701",  # Private name imports are needed for unit testing internals
  "S101",  # pytest uses assert by convention
  "S105",  # Test tokens are intentionally hardcoded fake values
  "SLF001"  # Private member access is needed for testing implementation details
]

[tool.ruff.lint.pydocstyle]
convention = "google"
