[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.8,<1.0.0"]

[dependency-groups]
dev = [
  "azure-core>=1.41.0",
  "detect-secrets>=1.5.0",
  "mypy>=1.15.0",
  "prek>=0.4.3",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "rich>=13.0.0",
  "ruff>=0.11.0",
  "ty>=0.0.42",
  "types-requests>=2.32.0"
]
docs = [
  "furo>=2024.1.29",
  "myst-parser>=4.0.0",
  "sphinx>=8.2.3"
]

[project]
authors = [
  {name = "Fred Stober", email = "pyado@fredstober.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP"
]
dependencies = [
  "pydantic>=2.11.7",
  "requests>=2.32.2"
]
description = "Typed, Pydantic-backed wrappers and Pythonic convenience methods for the Azure DevOps REST API"
keywords = ["azure", "devops", "ado", "api", "pydantic", "azure-devops"]
license = "MIT"
name = "pyado"
readme = "README.md"
requires-python = ">=3.11"
version = "0.6.1"

[project.optional-dependencies]
azure = ["azure-core>=1.41.0"]

[project.urls]
"Bug Tracker" = "https://github.com/fredstober/pyado/issues"
Documentation = "https://pyado.readthedocs.io/"
Homepage = "https://github.com/fredstober/pyado"
Repository = "https://github.com/fredstober/pyado"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["scripts", "*/scripts"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "def test\\(\\) -> None:",
  "if TYPE_CHECKING:"
]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
omit = ["tests/integration/*"]
source = ["pyado", "scripts"]

[tool.mypy]
plugins = ["pydantic.mypy"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_errors = true
module = ["pyado.oop.smoke_test.*"]

[tool.pytest.ini_options]
addopts = "--cov=pyado --cov=tests --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff.lint]
ignore = [
  "ANN401",  # any-type
  "COM812",  # missing-trailing-comma
  "PLR0904",  # OOP resource classes expose many public methods by design
  "PLR0913"  # function argument counts are not constrained in this project
]
preview = true
select = [
  "ALL"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "D101",  # Test classes don't need class-level docstrings
  "D102",  # Test methods are self-documenting via their names
  "PLR2004",  # Magic values in test assertions are self-explanatory
  "PLR6301",  # Test helper methods are instance methods by convention
  "PLC2701",  # Private name imports are needed for unit testing internals
  "S101",  # pytest uses assert by convention
  "S105",  # Test tokens are intentionally hardcoded fake values
  "SLF001",  # Private member access is needed for testing implementation details
  "PLR0917",  # Helper functions may need >5 positional params
  "FBT001",  # Boolean flags are acceptable in test helpers
  "FBT002",  # Boolean defaults are acceptable in test helpers
  "DOC201",  # Test helper Returns are self-evident from the type annotation
  "BLE001",  # Smoke tests legitimately catch broad exceptions for skip/fail reporting
  "S311"  # RNG is used for test seed selection, not cryptography
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
exclude = ["src/pyado/oop/smoke_test"]

[tool.uv.build-backend]
exclude = ["src/pyado/oop/smoke_test"]
